# diffview

./: AGENTS.md  Cargo.toml  README.md
src/: app.rs  clipboard.rs  config.rs  main.rs
src/git/: apply.rs  diff.rs  mod.rs  status.rs
src/ui/: diff.rs  mod.rs  statusbar.rs  tree.rs
