[package]
name = "diffview"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "diffview"
path = "src/main.rs"

[dependencies]
ratatui    = "0.29"
crossterm  = "0.28"
tokio      = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
anyhow     = "1"
serde      = { version = "1", features = ["derive"] }
toml       = "0.8"
ansi-to-tui = "7"
clap       = { version = "4", features = ["derive"] }
